[package]
name = "crdt_tree"
version = "0.0.16"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Tree Conflict-free Replicated Data Type (CRDT)"
homepage = "http://maidsafe.net"
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/crdt-tree"

[dependencies]
